crates/pg_syntax/tests/snapshots/postgres_regress/numeric_big@452.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO num_exp_log10 VALUES (4,'24.726676547286224970759328746582840552419566534667446425423046931401641497155587075591229106937829957279943690528061985864558314570189069764367933957499905044566413640017549478921384160584906257607957223101377816440084188042395098536074479064548620374152344954289432050971466476174493306432228880930006524504974367146536665170956555486181410864034862861231267121149652317599303804477688621597163730470970207231328339082779056152481480926452142005969020950341307977091850953883445808399574256295803245530993204179747743812544604144379381347499056545148243304041538981954204310612049423688645476667184129189153715486929216331980316967699254518020077226689317148303152585009031597809279387172427408557115400021035692880631275593381822805377317270568779655383061987766693697518921188619814204902583361096973421134004');"
---
InsertStmt@0..853
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..25
    Ident@12..25 "num_exp_log10"
  Whitespace@25..26 " "
  SelectStmt@26..851
    Values@26..32 "VALUES"
    Whitespace@32..33 " "
    Ascii40@33..34 "("
    List@34..851
      AConst@34..35
        Iconst@34..35 "4"
      Ascii44@35..36 ","
      AConst@36..851
        Sconst@36..851 "'24.72667654728622497 ..."
  Ascii41@851..852 ")"
  Ascii59@852..853 ";"

